--- a/views/tasks.html
+++ b/views/tasks.html
@@ -14,7 +14,7 @@
   a:visited {color:white; font-family: sans-serif}
   a:active {color:gray; font-family: sans-serif}
   ul {color:white; font-family: sans-serif}
-  .editor{width: fit-content; height: fit-content; white-space: pre; background-color: black; color:aliceblue; font-family: sans-serif}
+  .editor{width: fit-content; height: fit-content; white-space: pre; background-color: black; color:aliceblue; font-family: sans-serif; border: 2px solid gray;}
   .editorLines{width: fit-content; height: fit-content; white-space: pre; background-color: black; color:grey; font-family: sans-serif; border: 2px solid gray;}
   .flex-container {
     display: flex;
