Highlight syntax refactor

--- a/views/tasks.html
+++ b/views/tasks.html
@@ -185,26 +185,28 @@ const taskNames = ["taskOneText", "taskTwoText", "taskThreeText", "taskFourText"
 
 document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
 
-let editorContent = document.getElementById("editor").textContent;
-let lines = editorContent.split("\n");
+function highlightSyntax() {
+  let editorContent = document.getElementById("editor").textContent;
+  let lines = editorContent.split("\n");
 
-let newLines = lines.map(line => {
-  let words = line.split(" ");
-  let newWords = words.map(word => {
-    if (word == "if") {
-      return `<span style="color:red;">${word}</span>`;
-    } else {
-      return word;
-    }
-  });
-  console.log(newWords);
-  console.log(newWords.join(" "));
-  return newWords.join(" ");
-}).join("\n");
+  let newLines = lines.map(line => {
+    let words = line.split(" ");
+    let newWords = words.map(word => {
+      if (word == "if") {
+        return `<span style="color:red;">${word}</span>`;
+      } else {
+        return word;
+      }
+    });
+    console.log(newWords);
+    console.log(newWords.join(" "));
+    return newWords.join(" ");
+  }).join("\n");
 
-console.log(newLines);
+  console.log(newLines);
 
-document.getElementById("editor").innerHTML = newLines;
+  document.getElementById("editor").innerHTML = newLines;
+}
 
 function populateLineNumbers() {
     let editorContent = document.getElementById("editor").textContent;
@@ -221,6 +223,7 @@ function populateLineNumbers() {
 
 
 populateLineNumbers();
+highlightSyntax();
 
   const ignoredErrors = new Map([
       ["TaskOne", ["master.thesis.backend.errors.MissingEqualsMethodError"] ], 
@@ -362,6 +365,7 @@ function shouldIgnoreError(obj) {
     } 
     document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
     populateLineNumbers();
+    highlightSyntax();
   }
 
   function previousTask() {
@@ -372,6 +376,7 @@ function shouldIgnoreError(obj) {
     }
     document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
     populateLineNumbers();
+    highlightSyntax();
   }
  
   document.getElementById('buttonInput').addEventListener('click', postInputData, false);
