--- a/views/tasks.html
+++ b/views/tasks.html
@@ -29,7 +29,7 @@
 
     <div class="editorLines" id="editorLines"></div>
 
-    <div class="editor" contenteditable="true" id="editor"></div>
+    <div class="editor" contenteditable="true" spellcheck="false" id="editor"></div>
     
   </div>
 
@@ -312,11 +312,11 @@ const config = { attributes: true, childList: true, subtree: true };
 const callback = function(mutationsList, observer) {
     for(const mutation of mutationsList) {
         if (mutation.type === 'childList') {
-            console.log('A child node has been added or removed.');
+            console.log('Something changed!');
             populateLineNumbers();
         }
         else if (mutation.type === 'attributes') {
-            console.log('The ' + mutation.attributeName + ' attribute was modified.');
+            console.log('The ' + mutation.attributeName + ' changed!');
         }
     }
 };
