--- a/views/tasks.html
+++ b/views/tasks.html
@@ -15,6 +15,7 @@
   a:active {color:gray; font-family: sans-serif}
   ul {color:white; font-family: sans-serif}
   .editor{width: fit-content; height: fit-content; white-space: pre; background-color: black; color:aliceblue; font-family: sans-serif; border: 2px solid gray;}
+  .console{width: 1000px; height: fit-content; white-space: pre; background-color: black; color:aliceblue; font-family: sans-serif; border: 2px solid gray;}
   .editorLines{width: fit-content; height: fit-content; white-space: pre; background-color: black; color:grey; font-family: sans-serif; border: 2px solid gray;}
   .flex-container {
     display: flex;
@@ -29,7 +30,7 @@
 
     <div class="editorLines" id="editorLines"></div>
 
-    <div class="editor" contenteditable="true" spellcheck="false" id="editor"></div>
+    <div class="editor" contenteditable="true" spellcheck="false" autocomplete='off' id="editor"></div>
     
   </div>
 
@@ -161,12 +162,15 @@ public class TaskFive {
     <button type="button" id="buttonGetTips">Get tip</button>
     <button type="button" id="buttonPreviousTask">Previous task</button>
     <button type="button" id="buttonNextTask">Next task</button>
-    <p id="positionText"></p>
-    <p id="explanationText"></p>
-    <p id="suggestionText"></p>
-    <p id="linkText"></p>
-    <a href="#" id="urllink"></a>
-    <p id="tipText"></p>
+    <div class="console" spellcheck="false" id="console">
+      <p id="positionText"></p>
+      <p id="explanationText"></p>
+      <p id="suggestionText"></p>
+      <p id="linkText"></p>
+      <a href="#" id="urllink"></a>
+      <p id="tipText"></p>
+    </div>
+    
 </body>
 <script type="module">
 
@@ -182,6 +186,7 @@ function clearAllFields() {
 
 let taskNumber = 0;
 const taskNames = ["taskOneText", "taskTwoText", "taskThreeText", "taskFourText", "taskFiveText"];
+let shouldUpdateEditor = true;
 
 document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
 
@@ -295,8 +300,6 @@ function populateLineNumbers() {
     }
   }
 
-
-
 populateLineNumbers();
 highlightSyntax();
 
@@ -307,18 +310,36 @@ document.getElementById('editor').addEventListener('keydown', event => {
   }
 })
 
-const editor = document.getElementById('editor');
-const config = { attributes: true, childList: true, subtree: true };
+document.getElementById('editor').addEventListener('keydown', event => {
+  if (event.key === 'Tab') {
+    document.execCommand('insertHTML', false, '\t');
+    event.preventDefault()
+  }
+})
+
+document.getElementById('editor').addEventListener('keydown', event => {
+  if (event.key === 'Space') {
+    document.execCommand('insertHTML', false, '\s');
+    event.preventDefault()
+  }
+})
+
+const config = {childList: true, subtree: true, CharacterData: true, attributes: true };
 const callback = function(mutationsList, observer) {
     for(const mutation of mutationsList) {
         if (mutation.type === 'childList') {
             console.log('Something changed!');
             populateLineNumbers();
+            let editorContent = document.getElementById("editor").textContent;
+            console.log(editorContent);
         }
-        else if (mutation.type === 'attributes') {
-            console.log('The ' + mutation.attributeName + ' changed!');
+        if (mutation.type==='attributes') {
+            console.log('Something changed style!');
+            populateLineNumbers();
+            let editorContent = document.getElementById("editor").textContent;
+            console.log(editorContent);
         }
-    }
+  }
 };
 const observer = new MutationObserver(callback);
 observer.observe(editor, config);
@@ -463,7 +484,9 @@ function shouldIgnoreError(obj) {
     } 
     document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
     populateLineNumbers();
+    observer.disconnect();
     highlightSyntax();
+    observer.observe(editor, config);
   }
 
   function previousTask() {
@@ -474,7 +497,9 @@ function shouldIgnoreError(obj) {
     }
     document.getElementById("editor").textContent = document.getElementById(taskNames[taskNumber]).value;
     populateLineNumbers();
+    observer.disconnect();
     highlightSyntax();
+    observer.observe(editor, config);
   }
  
   document.getElementById('buttonInput').addEventListener('click', postInputData, false);
