Fix gap in error

--- a/views/tasks.html
+++ b/views/tasks.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
-  p {color:white; font-family: sans-serif}
+  p {color:white; font-family: sans-serif; margin:0; margin-top: -20pt;}
   h1 {color:white; font-family: sans-serif}
   h2 {color:white; font-family: sans-serif}
   h3 {color:white; font-family: sans-serif}
@@ -73,7 +73,6 @@ public class TaskTwo {
         Bag bag1 = new Bag(5);
         Bag bag2 = new Bag(5);
 
-        // TODO: TASK 2
         // TODO: Change the condition such that the bags are compared correctly. Implement the missing method in class Bag above.
         if (bag1 == bag2) {
             System.out.println("bag1 is equal to bag2, good job! :)");
@@ -96,7 +95,6 @@ public class TaskThree {
         int a = 7;
         int b = 5;
 
-        // TODO: TASK 3
         // TODO: Change the condition such that "a/b" is equal to 1.4.
         if (a/b == 1.4) {
             System.out.println("Woho, a/b has the correct value!");
