open link in new tab

--- a/views/tasks.html
+++ b/views/tasks.html
@@ -9,10 +9,10 @@
   h1 {color:white; font-family: sans-serif}
   h2 {color:white; font-family: sans-serif}
   h3 {color:white; font-family: sans-serif}
-  a:link {color:white; font-family: sans-serif}
-  a:hover {color:gray; font-family: sans-serif}
-  a:visited {color:white; font-family: sans-serif}
-  a:active {color:gray; font-family: sans-serif}
+  a:link {color:white; font-family: sans-serif;}
+  a:hover {color:gray; font-family: sans-serif;}
+  a:visited {color:white; font-family: sans-serif;}
+  a:active {color:gray; font-family: sans-serif;}
   ul {color:white; font-family: sans-serif}
   .editor{width: fit-content; height: fit-content; white-space: pre; background-color: black; color:aliceblue; font-family: sans-serif; border: 2px solid gray;}
   .console{width: 1500px; height: fit-content; white-space: pre; background-color: black; color:aliceblue; font-family: sans-serif; border: 2px solid gray;}
@@ -165,7 +165,7 @@ public class TaskFive {
       <p id="explanationText"></p>
       <p id="suggestionText"></p>
       <p id="linkText"></p>
-      <a href="#" id="urllink"></a>
+      <a href="#" target="_blank" id="urllink"></a>
       <p id="tipText"></p>
     </div>
     
