Fix link margins

--- a/views/tasks.html
+++ b/views/tasks.html
@@ -166,7 +166,7 @@ public class TaskFive {
       <p id="suggestionText"></p>
       <p id="linkText"></p>
       <a href="#" target="_blank" id="urllink"></a>
-      <p id="tipText"></p>
+      <p id="tipText" style="margin-top: 15pt;"></p>
     </div>
     
 </body>
