--- a/views/tasks.html
+++ b/views/tasks.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
-  p {color:white; font-family: sans-serif; margin:0; margin-top: -20pt;}
+  p {color:white; font-family: sans-serif; margin:0; margin-top: -20pt; word-break: break-all; white-space: normal;}
   h1 {color:white; font-family: sans-serif}
   h2 {color:white; font-family: sans-serif}
   h3 {color:white; font-family: sans-serif}
@@ -364,10 +364,13 @@ observer.observe(editor, config);
       },
       body: data,
     }).then(
-            res => res.json()
+        res =>
+        res.json()
     ).then( json =>
     {
       clearAllFields();
+
+      console.log(json)
      
       const obj = JSON.parse(JSON.stringify(json));
 
