break spaces but preserve them

--- a/views/tasks.html
+++ b/views/tasks.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
-  p {color:white; font-family: sans-serif; margin:0; margin-top: -20pt; word-break: break-all; white-space: normal;}
+  p {color:white; font-family: sans-serif; margin:0; margin-top: -20pt; word-break: break-all; white-space: break-spaces;}
   h1 {color:white; font-family: sans-serif}
   h2 {color:white; font-family: sans-serif}
   h3 {color:white; font-family: sans-serif}
