--- a/views/tasks.html
+++ b/views/tasks.html
@@ -299,26 +299,6 @@ function populateLineNumbers() {
 populateLineNumbers();
 highlightSyntax();
 
-document.getElementById('editor').addEventListener('keydown', event => {
-  if (event.key === 'Enter') {
-    document.execCommand('insertLineBreak')
-    event.preventDefault()
-  }
-})
-
-document.getElementById('editor').addEventListener('keydown', event => {
-  if (event.key === 'Tab') {
-    document.execCommand('insertHTML', false, '\t');
-    event.preventDefault()
-  }
-})
-
-document.getElementById('editor').addEventListener('keydown', event => {
-  if (event.key === 'Space') {
-    document.execCommand('insertHTML', false, '\s');
-    event.preventDefault()
-  }
-})
 
 const config = {childList: true, subtree: true, CharacterData: true, attributes: true };
 const callback = function(mutationsList, observer) {
@@ -331,6 +311,34 @@ const callback = function(mutationsList, observer) {
 };
 const observer = new MutationObserver(callback);
 observer.observe(editor, config);
+
+document.getElementById('editor').addEventListener('keydown', event => {
+  if (event.key === 'Enter') {
+    observer.disconnect();
+    document.execCommand('insertHTML', false, '\n');
+    populateLineNumbers();
+    event.preventDefault()
+    observer.observe(editor, config);
+  }
+  if (event.key === 'Tab') {
+    observer.disconnect();
+    document.execCommand('insertHTML', false, '\t');
+    event.preventDefault()
+    observer.observe(editor, config);
+  }
+  if (event.key === 'Space') {
+    observer.disconnect();
+    document.execCommand('insertHTML', false, '\s');
+    event.preventDefault()
+    observer.observe(editor, config);
+  }
+  if (event.key === 'Backspace') {
+    observer.disconnect();
+    populateLineNumbers();
+    observer.observe(editor, config);
+  }
+})
+
 
   const ignoredErrors = new Map([
       ["TaskOne", ["master.thesis.backend.errors.MissingEqualsMethodError"] ], 
